@@ -1,3 +1,9 @@
+2009-07-06  Neil Williams  <linux@codehelp.co.uk>
+
+	* qof.pc.in: Migrate -lqofsql to Libs.private
+	* qof/Makefile.am: Isolate qofsql link commands from
+	  libgda3 link commands. Completes 0.8.1 release.
+
 2009-07-05  Neil Williams  <linux@codehelp.co.uk>
 
 	* backend/file/qsf-xml-map.c:
